Fix premium infoicon alignment

--- a/hsreplaynet/static/styles/premium.scss
+++ b/hsreplaynet/static/styles/premium.scss
@@ -256,7 +256,7 @@
 
 	.info-icon {
 		font-size: 1.2em;
-		padding: 8px;
+		padding: 5px 8px;
 		position: absolute;
 		right: 0;
 		top: 0;
